// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notification /> should render properly 1`] = `
<div>
  <div
    className="notification notification--undefined"
  >
    <MessageIcon
      height={32}
      width={32}
    />
    <p />
  </div>
  <style
    jsx={true}
  >
    
          .notification {
            display: flex;
            align-items: center;
            box-sizing: border-box;
            padding: 1rem;
            font-size: 1.05rem;
            font-family: 'Josefin Sans', sans-serif;
            color: #F8F8F7;
            width: 280px;
            min-height: 5rem;
            background-color: #2d3047;
            border-radius: 3px;
            box-shadow: 11px 10px 34px -7px rgba(0, 0, 0, 0.49);
          }

          .notification--ERROR {
            background-color: #982649;
          }

          .notification--SUCCESS {
            background-color: #75ab88;
          }

          .notification--WARNING {
            background-color: #E37E5B;
          }
        
  </style>
</div>
`;

exports[`<Notification /> should render with different icon 1`] = `
<div>
  <div
    className="notification notification--ERROR"
  >
    <MessageIcon
      height={32}
      level="ERROR"
      width={32}
    />
    <p>
      error
    </p>
  </div>
  <style
    jsx={true}
  >
    
          .notification {
            display: flex;
            align-items: center;
            box-sizing: border-box;
            padding: 1rem;
            font-size: 1.05rem;
            font-family: 'Josefin Sans', sans-serif;
            color: #F8F8F7;
            width: 280px;
            min-height: 5rem;
            background-color: #2d3047;
            border-radius: 3px;
            box-shadow: 11px 10px 34px -7px rgba(0, 0, 0, 0.49);
          }

          .notification--ERROR {
            background-color: #982649;
          }

          .notification--SUCCESS {
            background-color: #75ab88;
          }

          .notification--WARNING {
            background-color: #E37E5B;
          }
        
  </style>
</div>
`;

exports[`<Notification /> should render with different icon 2`] = `
<div>
  <div
    className="notification notification--SUCCESS"
  >
    <MessageIcon
      height={32}
      level="SUCCESS"
      width={32}
    />
    <p>
      error
    </p>
  </div>
  <style
    jsx={true}
  >
    
          .notification {
            display: flex;
            align-items: center;
            box-sizing: border-box;
            padding: 1rem;
            font-size: 1.05rem;
            font-family: 'Josefin Sans', sans-serif;
            color: #F8F8F7;
            width: 280px;
            min-height: 5rem;
            background-color: #2d3047;
            border-radius: 3px;
            box-shadow: 11px 10px 34px -7px rgba(0, 0, 0, 0.49);
          }

          .notification--ERROR {
            background-color: #982649;
          }

          .notification--SUCCESS {
            background-color: #75ab88;
          }

          .notification--WARNING {
            background-color: #E37E5B;
          }
        
  </style>
</div>
`;

exports[`<Notification /> should render with different icon 3`] = `
<div>
  <div
    className="notification notification--WARNING"
  >
    <MessageIcon
      height={32}
      level="WARNING"
      width={32}
    />
    <p>
      error
    </p>
  </div>
  <style
    jsx={true}
  >
    
          .notification {
            display: flex;
            align-items: center;
            box-sizing: border-box;
            padding: 1rem;
            font-size: 1.05rem;
            font-family: 'Josefin Sans', sans-serif;
            color: #F8F8F7;
            width: 280px;
            min-height: 5rem;
            background-color: #2d3047;
            border-radius: 3px;
            box-shadow: 11px 10px 34px -7px rgba(0, 0, 0, 0.49);
          }

          .notification--ERROR {
            background-color: #982649;
          }

          .notification--SUCCESS {
            background-color: #75ab88;
          }

          .notification--WARNING {
            background-color: #E37E5B;
          }
        
  </style>
</div>
`;

exports[`<Notification /> should render with different icon 4`] = `
<div>
  <div
    className="notification notification--INFO"
  >
    <MessageIcon
      height={32}
      level="INFO"
      width={32}
    />
    <p>
      error
    </p>
  </div>
  <style
    jsx={true}
  >
    
          .notification {
            display: flex;
            align-items: center;
            box-sizing: border-box;
            padding: 1rem;
            font-size: 1.05rem;
            font-family: 'Josefin Sans', sans-serif;
            color: #F8F8F7;
            width: 280px;
            min-height: 5rem;
            background-color: #2d3047;
            border-radius: 3px;
            box-shadow: 11px 10px 34px -7px rgba(0, 0, 0, 0.49);
          }

          .notification--ERROR {
            background-color: #982649;
          }

          .notification--SUCCESS {
            background-color: #75ab88;
          }

          .notification--WARNING {
            background-color: #E37E5B;
          }
        
  </style>
</div>
`;
